[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "Production MCP Server + LangGraph Agent + Data Pipeline for Healthcare Claims"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
pipeline = [
    "apache-airflow>=2.9.0",
    "pandas>=2.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
